--- a/app/src/main/res/layout/text_row_item.xml
+++ b/app/src/main/res/layout/text_row_item.xml
@@ -1,58 +1,5 @@
-<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="@dimen/list_item_height"-->
-    <!--android:layout_marginLeft="@dimen/margin_medium"-->
-    <!--android:layout_marginRight="@dimen/margin_medium"-->
-    <!--android:gravity="center_vertical">-->
-
-    <!--<android.support.v7.widget.CardView-->
-        <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
-        <!--android:id="@+id/cardView"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content">-->
-
-        <!--<RelativeLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:padding="16dp" >-->
-
-            <!--<ImageView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:id="@+id/linkIcon"-->
-                <!--android:layout_alignParentLeft="true"-->
-                <!--android:layout_alignParentTop="true"-->
-                <!--android:layout_marginRight="16dp" />-->
-
-            <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:id="@+id/linkText"-->
-                <!--android:layout_toRightOf="@+id/linkIcon"-->
-                <!--android:layout_alignParentTop="true"/>-->
-
-            <!--<View android:id="@+id/separator"-->
-                <!--android:background="#e1dada"-->
-                <!--android:layout_width = "fill_parent"-->
-                <!--android:layout_height="1dip"-->
-                <!--android:layout_centerVertical ="true"-->
-                <!--android:layout_alignParentTop="true"-->
-                <!--android:layout_below="@+id/linkText"-->
-                <!--android:layout_toRightOf="@id/linkIcon" />-->
-
-            <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:id="@+id/linkUrl"-->
-                <!--android:layout_below="@+id/separator"-->
-                <!--android:layout_toRightOf="@id/linkIcon"-->
-                <!--/>-->
-
-        <!--</RelativeLayout>-->
-
-    <!--</android.support.v7.widget.CardView>-->
-<!--</FrameLayout>-->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/frame_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
